Fix error of EV AGC mileage

--- a/jwang/notes/cosim_ev_ieee39_f.ipynb
+++ b/jwang/notes/cosim_ev_ieee39_f.ipynb
@@ -60,7 +60,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.post4569.dev0+gcabe24a\n",
+      "0.post4573.dev0+g29737c6\n",
       "2.8.0\n"
      ]
     }
@@ -261,44 +261,44 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|                                                                                                                                      | 0/3600 [00:00<?, ?it/s]RTED GB model is loaded.\n",
+      "  0%|                                                                                                                                                                      | 0/3600 [00:00<?, ?it/s]RTED GB model is loaded.\n",
       "RTED removed: ['rampu', 'rampd']\n",
       "RTED is solved.\n",
       "RTED: total cost=4658.49\n",
-      "  8%|██████████▎                                                                                                                 | 300/3600 [00:24<04:19, 12.70it/s]RTED GB model is loaded.\n",
+      "  8%|████████████▉                                                                                                                                               | 299/3600 [00:27<05:20, 10.30it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4648.12\n",
-      " 17%|████████████████████▋                                                                                                       | 600/3600 [00:49<04:16, 11.70it/s]RTED GB model is loaded.\n",
+      " 17%|█████████████████████████▉                                                                                                                                  | 599/3600 [00:55<04:34, 10.92it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4683.936\n",
-      " 25%|███████████████████████████████                                                                                             | 900/3600 [01:17<04:10, 10.79it/s]RTED GB model is loaded.\n",
+      " 25%|██████████████████████████████████████▉                                                                                                                     | 899/3600 [01:23<04:32,  9.93it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4686.505\n",
-      " 33%|█████████████████████████████████████████                                                                                  | 1200/3600 [01:48<04:08,  9.65it/s]RTED GB model is loaded.\n",
+      " 33%|███████████████████████████████████████████████████▋                                                                                                       | 1200/3600 [01:54<04:04,  9.80it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4699.69\n",
-      " 42%|███████████████████████████████████████████████████▎                                                                       | 1500/3600 [02:21<03:59,  8.77it/s]RTED GB model is loaded.\n",
+      " 42%|████████████████████████████████████████████████████████████████▌                                                                                          | 1500/3600 [02:28<04:00,  8.73it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4696.095\n",
-      " 50%|█████████████████████████████████████████████████████████████▌                                                             | 1800/3600 [02:57<03:41,  8.12it/s]RTED GB model is loaded.\n",
+      " 50%|█████████████████████████████████████████████████████████████████████████████▌                                                                             | 1800/3600 [03:05<03:36,  8.30it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4706.467\n",
-      " 58%|███████████████████████████████████████████████████████████████████████▊                                                   | 2100/3600 [03:36<03:05,  8.09it/s]RTED GB model is loaded.\n",
+      " 58%|██████████████████████████████████████████████████████████████████████████████████████████▍                                                                | 2100/3600 [03:42<03:05,  8.10it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4741.653\n",
-      " 67%|██████████████████████████████████████████████████████████████████████████████████                                         | 2400/3600 [04:21<02:46,  7.23it/s]RTED GB model is loaded.\n",
+      " 67%|███████████████████████████████████████████████████████████████████████████████████████████████████████▎                                                   | 2400/3600 [04:22<02:35,  7.71it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4734.685\n",
-      " 75%|████████████████████████████████████████████████████████████████████████████████████████████▎                              | 2700/3600 [05:08<02:22,  6.29it/s]RTED GB model is loaded.\n",
+      " 75%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▎                                      | 2700/3600 [05:04<02:06,  7.12it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4707.368\n",
-      " 83%|██████████████████████████████████████████████████████████████████████████████████████████████████████▌                    | 3000/3600 [05:53<01:25,  7.04it/s]RTED GB model is loaded.\n",
+      " 83%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▏                         | 3000/3600 [05:50<01:32,  6.49it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4673.78\n",
-      " 92%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████▊          | 3300/3600 [06:40<00:48,  6.17it/s]RTED GB model is loaded.\n",
+      " 92%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████             | 3300/3600 [06:36<00:46,  6.52it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4676.939\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3600/3600 [07:31<00:00,  7.97it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3600/3600 [07:24<00:00,  8.10it/s]\n"
      ]
     }
    ],
