--- a/jwang/notes/cosim_ev_ieee39_fict.ipynb
+++ b/jwang/notes/cosim_ev_ieee39_fict.ipynb
@@ -60,7 +60,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.post4570.dev0+g9d4e416\n",
+      "0.post4573.dev0+g29737c6\n",
       "2.8.0\n"
      ]
     }
@@ -252,44 +252,44 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|                                                                                                                     | 0/3600 [00:00<?, ?it/s]RTED GB model is loaded.\n",
+      "  0%|                                                                                                                                                                      | 0/3600 [00:00<?, ?it/s]RTED GB model is loaded.\n",
       "RTED removed: ['rampu', 'rampd']\n",
       "RTED is solved.\n",
       "RTED: total cost=4658.585\n",
-      "  8%|████████▉                                                                                                  | 299/3600 [00:24<04:30, 12.19it/s]RTED GB model is loaded.\n",
+      "  8%|████████████▉                                                                                                                                               | 299/3600 [00:22<04:18, 12.77it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4648.993\n",
-      " 17%|█████████████████▊                                                                                         | 600/3600 [00:51<04:28, 11.18it/s]RTED GB model is loaded.\n",
+      " 17%|█████████████████████████▉                                                                                                                                  | 599/3600 [00:49<04:14, 11.78it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4684.296\n",
-      " 25%|██████████████████████████▋                                                                                | 899/3600 [01:19<04:27, 10.10it/s]RTED GB model is loaded.\n",
+      " 25%|██████████████████████████████████████▉                                                                                                                     | 899/3600 [01:20<04:49,  9.32it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4687.455\n",
-      " 33%|███████████████████████████████████▎                                                                      | 1200/3600 [01:54<04:28,  8.94it/s]RTED GB model is loaded.\n",
+      " 33%|███████████████████████████████████████████████████▋                                                                                                       | 1200/3600 [01:53<04:10,  9.57it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4700.32\n",
-      " 42%|████████████████████████████████████████████▏                                                             | 1500/3600 [02:30<04:12,  8.31it/s]RTED GB model is loaded.\n",
+      " 42%|████████████████████████████████████████████████████████████████▌                                                                                          | 1500/3600 [02:30<04:04,  8.60it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4697.102\n",
-      " 50%|█████████████████████████████████████████████████████                                                     | 1800/3600 [03:09<04:00,  7.48it/s]RTED GB model is loaded.\n",
+      " 50%|█████████████████████████████████████████████████████████████████████████████▌                                                                             | 1800/3600 [03:08<04:07,  7.28it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4706.902\n",
-      " 58%|█████████████████████████████████████████████████████████████▊                                            | 2100/3600 [03:52<03:34,  7.00it/s]RTED GB model is loaded.\n",
+      " 58%|██████████████████████████████████████████████████████████████████████████████████████████▍                                                                | 2100/3600 [03:46<03:03,  8.15it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4742.112\n",
-      " 67%|██████████████████████████████████████████████████████████████████████▋                                   | 2400/3600 [04:41<03:10,  6.30it/s]RTED GB model is loaded.\n",
+      " 67%|███████████████████████████████████████████████████████████████████████████████████████████████████████▎                                                   | 2400/3600 [04:27<02:40,  7.46it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4734.919\n",
-      " 75%|███████████████████████████████████████████████████████████████████████████████▌                          | 2700/3600 [05:31<02:23,  6.26it/s]RTED GB model is loaded.\n",
+      " 75%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▎                                      | 2700/3600 [05:12<03:12,  4.66it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4707.236\n",
-      " 83%|████████████████████████████████████████████████████████████████████████████████████████▎                 | 3000/3600 [06:22<01:40,  5.95it/s]RTED GB model is loaded.\n",
+      " 83%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▏                         | 3000/3600 [05:59<01:31,  6.57it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4674.415\n",
-      " 92%|█████████████████████████████████████████████████████████████████████████████████████████████████▏        | 3300/3600 [07:15<00:54,  5.49it/s]RTED GB model is loaded.\n",
+      " 92%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████             | 3300/3600 [06:47<00:48,  6.17it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4679.964\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████| 3600/3600 [08:12<00:00,  7.31it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3600/3600 [07:40<00:00,  7.82it/s]\n"
      ]
     }
    ],
