--- a/jwang/notes/cosim_ev_ieee39_s.ipynb
+++ b/jwang/notes/cosim_ev_ieee39_s.ipynb
@@ -60,7 +60,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.post4572.dev0+g5dc8bd9\n",
+      "0.post4573.dev0+g29737c6\n",
       "2.8.0\n"
      ]
     }
@@ -249,40 +249,40 @@
       "RTED removed: ['rampu', 'rampd']\n",
       "RTED is solved.\n",
       "RTED: total cost=4660.003\n",
-      "  8%|████████▉                                                                                                  | 300/3600 [00:21<03:54, 14.09it/s]RTED GB model is loaded.\n",
+      "  8%|████████▉                                                                                                  | 299/3600 [00:28<05:29, 10.02it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4661.806\n",
-      " 17%|█████████████████▊                                                                                         | 600/3600 [00:44<04:04, 12.26it/s]RTED GB model is loaded.\n",
+      " 17%|█████████████████▊                                                                                         | 600/3600 [00:58<04:53, 10.22it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4684.579\n",
-      " 25%|██████████████████████████▊                                                                                | 900/3600 [01:10<03:57, 11.35it/s]RTED GB model is loaded.\n",
+      " 25%|██████████████████████████▊                                                                                | 900/3600 [01:34<08:14,  5.46it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4701.647\n",
-      " 33%|███████████████████████████████████▎                                                                      | 1200/3600 [01:40<04:17,  9.34it/s]RTED GB model is loaded.\n",
+      " 33%|███████████████████████████████████▎                                                                      | 1200/3600 [02:16<05:10,  7.72it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4707.302\n",
-      " 42%|████████████████████████████████████████████▏                                                             | 1500/3600 [02:16<03:47,  9.22it/s]RTED GB model is loaded.\n",
+      " 42%|████████████████████████████████████████████▏                                                             | 1500/3600 [03:03<04:51,  7.21it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4710.702\n",
-      " 50%|█████████████████████████████████████████████████████                                                     | 1800/3600 [02:54<04:04,  7.38it/s]RTED GB model is loaded.\n",
+      " 50%|█████████████████████████████████████████████████████                                                     | 1800/3600 [03:53<04:34,  6.56it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4713.401\n",
-      " 58%|█████████████████████████████████████████████████████████████▊                                            | 2100/3600 [03:32<03:12,  7.80it/s]RTED GB model is loaded.\n",
+      " 58%|█████████████████████████████████████████████████████████████▊                                            | 2100/3600 [04:46<05:41,  4.40it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4745.15\n",
-      " 67%|██████████████████████████████████████████████████████████████████████▋                                   | 2400/3600 [04:14<02:46,  7.19it/s]RTED GB model is loaded.\n",
+      " 67%|██████████████████████████████████████████████████████████████████████▋                                   | 2400/3600 [05:52<05:16,  3.79it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4734.7\n",
-      " 75%|███████████████████████████████████████████████████████████████████████████████▌                          | 2700/3600 [04:57<02:10,  6.90it/s]RTED GB model is loaded.\n",
+      " 75%|███████████████████████████████████████████████████████████████████████████████▌                          | 2700/3600 [06:58<02:47,  5.38it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4706.313\n",
-      " 83%|████████████████████████████████████████████████████████████████████████████████████████▎                 | 3000/3600 [05:43<01:33,  6.44it/s]RTED GB model is loaded.\n",
+      " 83%|████████████████████████████████████████████████████████████████████████████████████████▎                 | 3000/3600 [08:02<01:49,  5.46it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4674.047\n",
-      " 92%|█████████████████████████████████████████████████████████████████████████████████████████████████▏        | 3300/3600 [06:32<00:45,  6.58it/s]RTED GB model is loaded.\n",
+      " 92%|█████████████████████████████████████████████████████████████████████████████████████████████████▏        | 3300/3600 [09:02<01:05,  4.57it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4683.571\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████| 3600/3600 [07:19<00:00,  8.19it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████| 3600/3600 [10:00<00:00,  5.99it/s]\n"
      ]
     }
    ],
