Rerun plot with ieee39

--- a/jwang/notes/cosim_ev_ieee39_tplot.ipynb
+++ b/jwang/notes/cosim_ev_ieee39_tplot.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.post4576.dev0+gfe71f06\n",
+      "0.post4577.dev0+gba9c962\n",
       "2.8.0\n"
      ]
     }
@@ -258,11 +258,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/06/z8ws9b2d733f7h6yc5qpn22w0000gn/T/ipykernel_50298/3656089960.py:17: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "/var/folders/06/z8ws9b2d733f7h6yc5qpn22w0000gn/T/ipykernel_69103/3656089960.py:17: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_yticklabels([f'{int(i*100)}%' for i in np.arange(0, 1.1, 0.2)])\n",
-      "/var/folders/06/z8ws9b2d733f7h6yc5qpn22w0000gn/T/ipykernel_50298/3656089960.py:17: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "/var/folders/06/z8ws9b2d733f7h6yc5qpn22w0000gn/T/ipykernel_69103/3656089960.py:17: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_yticklabels([f'{int(i*100)}%' for i in np.arange(0, 1.1, 0.2)])\n",
-      "/var/folders/06/z8ws9b2d733f7h6yc5qpn22w0000gn/T/ipykernel_50298/3656089960.py:17: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "/var/folders/06/z8ws9b2d733f7h6yc5qpn22w0000gn/T/ipykernel_69103/3656089960.py:17: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_yticklabels([f'{int(i*100)}%' for i in np.arange(0, 1.1, 0.2)])\n"
      ]
     },
@@ -343,87 +343,87 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_739b6\">\n",
+       "<table id=\"T_e1625\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_739b6_level0_col0\" class=\"col_heading level0 col0\" >Case1</th>\n",
-       "      <th id=\"T_739b6_level0_col1\" class=\"col_heading level0 col1\" >Case2</th>\n",
-       "      <th id=\"T_739b6_level0_col2\" class=\"col_heading level0 col2\" >Case3</th>\n",
+       "      <th id=\"T_e1625_level0_col0\" class=\"col_heading level0 col0\" >Case1</th>\n",
+       "      <th id=\"T_e1625_level0_col1\" class=\"col_heading level0 col1\" >Case2</th>\n",
+       "      <th id=\"T_e1625_level0_col2\" class=\"col_heading level0 col2\" >Case3</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_739b6_level0_row0\" class=\"row_heading level0 row0\" >Freq. Dev. mean [Hz]</th>\n",
-       "      <td id=\"T_739b6_row0_col0\" class=\"data row0 col0\" >-0.0</td>\n",
-       "      <td id=\"T_739b6_row0_col1\" class=\"data row0 col1\" >-1e-05</td>\n",
-       "      <td id=\"T_739b6_row0_col2\" class=\"data row0 col2\" >-1e-05</td>\n",
+       "      <th id=\"T_e1625_level0_row0\" class=\"row_heading level0 row0\" >Freq. Dev. mean [Hz]</th>\n",
+       "      <td id=\"T_e1625_row0_col0\" class=\"data row0 col0\" >-0.0</td>\n",
+       "      <td id=\"T_e1625_row0_col1\" class=\"data row0 col1\" >-1e-05</td>\n",
+       "      <td id=\"T_e1625_row0_col2\" class=\"data row0 col2\" >-1e-05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_739b6_level0_row1\" class=\"row_heading level0 row1\" >Freq. Dev. Std. [Hz]</th>\n",
-       "      <td id=\"T_739b6_row1_col0\" class=\"data row1 col0\" >0.00623</td>\n",
-       "      <td id=\"T_739b6_row1_col1\" class=\"data row1 col1\" >0.006</td>\n",
-       "      <td id=\"T_739b6_row1_col2\" class=\"data row1 col2\" >0.00603</td>\n",
+       "      <th id=\"T_e1625_level0_row1\" class=\"row_heading level0 row1\" >Freq. Dev. Std. [Hz]</th>\n",
+       "      <td id=\"T_e1625_row1_col0\" class=\"data row1 col0\" >0.00623</td>\n",
+       "      <td id=\"T_e1625_row1_col1\" class=\"data row1 col1\" >0.006</td>\n",
+       "      <td id=\"T_e1625_row1_col2\" class=\"data row1 col2\" >0.00603</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_739b6_level0_row2\" class=\"row_heading level0 row2\" >ACE mean [MW]</th>\n",
-       "      <td id=\"T_739b6_row2_col0\" class=\"data row2 col0\" >-0.01521</td>\n",
-       "      <td id=\"T_739b6_row2_col1\" class=\"data row2 col1\" >-0.0522</td>\n",
-       "      <td id=\"T_739b6_row2_col2\" class=\"data row2 col2\" >-0.03912</td>\n",
+       "      <th id=\"T_e1625_level0_row2\" class=\"row_heading level0 row2\" >ACE mean [MW]</th>\n",
+       "      <td id=\"T_e1625_row2_col0\" class=\"data row2 col0\" >-0.01521</td>\n",
+       "      <td id=\"T_e1625_row2_col1\" class=\"data row2 col1\" >-0.0522</td>\n",
+       "      <td id=\"T_e1625_row2_col2\" class=\"data row2 col2\" >-0.03912</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_739b6_level0_row3\" class=\"row_heading level0 row3\" >ACE Std. [MW]</th>\n",
-       "      <td id=\"T_739b6_row3_col0\" class=\"data row3 col0\" >21.77829</td>\n",
-       "      <td id=\"T_739b6_row3_col1\" class=\"data row3 col1\" >20.97947</td>\n",
-       "      <td id=\"T_739b6_row3_col2\" class=\"data row3 col2\" >21.07158</td>\n",
+       "      <th id=\"T_e1625_level0_row3\" class=\"row_heading level0 row3\" >ACE Std. [MW]</th>\n",
+       "      <td id=\"T_e1625_row3_col0\" class=\"data row3 col0\" >21.77829</td>\n",
+       "      <td id=\"T_e1625_row3_col1\" class=\"data row3 col1\" >20.97947</td>\n",
+       "      <td id=\"T_e1625_row3_col2\" class=\"data row3 col2\" >21.07158</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_739b6_level0_row4\" class=\"row_heading level0 row4\" >CPS1 score</th>\n",
-       "      <td id=\"T_739b6_row4_col0\" class=\"data row4 col0\" >153.08869</td>\n",
-       "      <td id=\"T_739b6_row4_col1\" class=\"data row4 col1\" >156.70854</td>\n",
-       "      <td id=\"T_739b6_row4_col2\" class=\"data row4 col2\" >156.26189</td>\n",
+       "      <th id=\"T_e1625_level0_row4\" class=\"row_heading level0 row4\" >CPS1 score</th>\n",
+       "      <td id=\"T_e1625_row4_col0\" class=\"data row4 col0\" >153.08869</td>\n",
+       "      <td id=\"T_e1625_row4_col1\" class=\"data row4 col1\" >156.70854</td>\n",
+       "      <td id=\"T_e1625_row4_col2\" class=\"data row4 col2\" >156.26189</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_739b6_level0_row5\" class=\"row_heading level0 row5\" >System AGC mileage [MWh]</th>\n",
-       "      <td id=\"T_739b6_row5_col0\" class=\"data row5 col0\" >8,277.79918</td>\n",
-       "      <td id=\"T_739b6_row5_col1\" class=\"data row5 col1\" >8,940.76994</td>\n",
-       "      <td id=\"T_739b6_row5_col2\" class=\"data row5 col2\" >8,864.53066</td>\n",
+       "      <th id=\"T_e1625_level0_row5\" class=\"row_heading level0 row5\" >System AGC mileage [MWh]</th>\n",
+       "      <td id=\"T_e1625_row5_col0\" class=\"data row5 col0\" >8,277.79918</td>\n",
+       "      <td id=\"T_e1625_row5_col1\" class=\"data row5 col1\" >8,940.76994</td>\n",
+       "      <td id=\"T_e1625_row5_col2\" class=\"data row5 col2\" >8,864.53066</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_739b6_level0_row6\" class=\"row_heading level0 row6\" >EV AGC mileage [MWh]</th>\n",
-       "      <td id=\"T_739b6_row6_col0\" class=\"data row6 col0\" >0.0</td>\n",
-       "      <td id=\"T_739b6_row6_col1\" class=\"data row6 col1\" >2,043.33919</td>\n",
-       "      <td id=\"T_739b6_row6_col2\" class=\"data row6 col2\" >1,801.41695</td>\n",
+       "      <th id=\"T_e1625_level0_row6\" class=\"row_heading level0 row6\" >EV AGC mileage [MWh]</th>\n",
+       "      <td id=\"T_e1625_row6_col0\" class=\"data row6 col0\" >0.0</td>\n",
+       "      <td id=\"T_e1625_row6_col1\" class=\"data row6 col1\" >2,043.33919</td>\n",
+       "      <td id=\"T_e1625_row6_col2\" class=\"data row6 col2\" >1,801.41695</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_739b6_level0_row7\" class=\"row_heading level0 row7\" >Generation cost [$]</th>\n",
-       "      <td id=\"T_739b6_row7_col0\" class=\"data row7 col0\" >133,031.39484</td>\n",
-       "      <td id=\"T_739b6_row7_col1\" class=\"data row7 col1\" >132,500.64676</td>\n",
-       "      <td id=\"T_739b6_row7_col2\" class=\"data row7 col2\" >132,556.21052</td>\n",
+       "      <th id=\"T_e1625_level0_row7\" class=\"row_heading level0 row7\" >Generation cost [$]</th>\n",
+       "      <td id=\"T_e1625_row7_col0\" class=\"data row7 col0\" >133,031.39484</td>\n",
+       "      <td id=\"T_e1625_row7_col1\" class=\"data row7 col1\" >132,500.64676</td>\n",
+       "      <td id=\"T_e1625_row7_col2\" class=\"data row7 col2\" >132,556.21052</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_739b6_level0_row8\" class=\"row_heading level0 row8\" >Milage payment [$]</th>\n",
-       "      <td id=\"T_739b6_row8_col0\" class=\"data row8 col0\" >8,857.24512</td>\n",
-       "      <td id=\"T_739b6_row8_col1\" class=\"data row8 col1\" >9,566.62384</td>\n",
-       "      <td id=\"T_739b6_row8_col2\" class=\"data row8 col2\" >9,485.04781</td>\n",
+       "      <th id=\"T_e1625_level0_row8\" class=\"row_heading level0 row8\" >Milage payment [$]</th>\n",
+       "      <td id=\"T_e1625_row8_col0\" class=\"data row8 col0\" >8,857.24512</td>\n",
+       "      <td id=\"T_e1625_row8_col1\" class=\"data row8 col1\" >9,566.62384</td>\n",
+       "      <td id=\"T_e1625_row8_col2\" class=\"data row8 col2\" >9,485.04781</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_739b6_level0_row9\" class=\"row_heading level0 row9\" >Milage payment to EV[$]</th>\n",
-       "      <td id=\"T_739b6_row9_col0\" class=\"data row9 col0\" >0.0</td>\n",
-       "      <td id=\"T_739b6_row9_col1\" class=\"data row9 col1\" >1,927.51614</td>\n",
-       "      <td id=\"T_739b6_row9_col2\" class=\"data row9 col2\" >2,186.37293</td>\n",
+       "      <th id=\"T_e1625_level0_row9\" class=\"row_heading level0 row9\" >Milage payment to EV[$]</th>\n",
+       "      <td id=\"T_e1625_row9_col0\" class=\"data row9 col0\" >0.0</td>\n",
+       "      <td id=\"T_e1625_row9_col1\" class=\"data row9 col1\" >2,186.37293</td>\n",
+       "      <td id=\"T_e1625_row9_col2\" class=\"data row9 col2\" >1,927.51614</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_739b6_level0_row10\" class=\"row_heading level0 row10\" >ICT compensation to EV [$]</th>\n",
-       "      <td id=\"T_739b6_row10_col0\" class=\"data row10 col0\" >0.0</td>\n",
-       "      <td id=\"T_739b6_row10_col1\" class=\"data row10 col1\" >846.1502</td>\n",
-       "      <td id=\"T_739b6_row10_col2\" class=\"data row10 col2\" >0.00087</td>\n",
+       "      <th id=\"T_e1625_level0_row10\" class=\"row_heading level0 row10\" >ICT compensation to EV [$]</th>\n",
+       "      <td id=\"T_e1625_row10_col0\" class=\"data row10 col0\" >0.0</td>\n",
+       "      <td id=\"T_e1625_row10_col1\" class=\"data row10 col1\" >846.1502</td>\n",
+       "      <td id=\"T_e1625_row10_col2\" class=\"data row10 col2\" >0.00087</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x157492940>"
+       "<pandas.io.formats.style.Styler at 0x17ab74cd0>"
       ]
      },
      "execution_count": 8,
@@ -491,7 +491,8 @@
     "    ict_df[['tt', 'ict']] *= 60\n",
     "    ict_df['rna'] = ict_df['nama'] / ict_df['nama'].sum()\n",
     "    payment = sfrc_calc(agc_df) * agc_df.loc[9].sum() / agc_df.sum().sum()\n",
-    "    ict_df['pna'] = payment * ict_df['rna']  # payment to single EV\n",
+    "    # payment to single EV\n",
+    "    ict_df['pna'] = payment * ict_df['rna']\n",
     "    ict_df['pict'] = (ict_df['ict'] - ict_df['tt']) * 4 / 60  # $2 per delayed hour\n",
     "    ict_df['pict'][ict_df['pict'] <= 0] = 0\n",
     "    pna = ict_df['pna'].sum()\n",
@@ -512,7 +513,9 @@
     "                      [agcs.loc[9].sum(), agcfn.loc[9].sum(), agcf.loc[9].sum()],\n",
     "                      [gts, gtfn, gtf],\n",
     "                      [sms, smfn, smf],\n",
-    "                      [pna_s, pna_f, pna_fn],\n",
+    "                      [sms*agcs.loc[9].sum()/agcs.sum().sum(),\n",
+    "                       smfn*agcfn.loc[9].sum()/agcfn.sum().sum(),\n",
+    "                       smf*agcf.loc[9].sum()/agcf.sum().sum()],\n",
     "                      [pict_s, pict_fn, pict_f]])\n",
     "res_df = pd.DataFrame(data=res_value,\n",
     "                      columns=['Case1', 'Case2', 'Case3'])\n",
@@ -544,7 +547,7 @@
        "       [     0.     ,   2043.33919,   1801.41695],\n",
        "       [133031.39484, 132500.64676, 132556.21052],\n",
        "       [  8857.24512,   9566.62384,   9485.04781],\n",
-       "       [     0.     ,   1927.51614,   2186.37293],\n",
+       "       [     0.     ,   2186.37293,   1927.51614],\n",
        "       [     0.     ,    846.1502 ,      0.00087]])"
       ]
      },
@@ -863,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
