[WIP] Refactor EVData as pd df

--- a/jwang/ev_ssm/demo.ipynb
+++ b/jwang/ev_ssm/demo.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
        "[10000 rows x 10 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
     "        ----------\n",
     "        \"\"\"\n",
     "        self.config = DictAttr(config)\n",
-    "    \n",
+    "\n",
     "    def __repr__(self) -> str:\n",
     "        info = f'MCS: {self.config.t} to {self.config.tf}'\n",
     "        return pprint.pformat(info)\n",
@@ -384,29 +384,30 @@
     "        \"\"\"\n",
     "        self.name = name\n",
     "        self.config = DictAttr(config)\n",
-    "        MCSconfig = {'t':t, 'tf':t}\n",
+    "        MCSconfig = {'t': t, 'tf': t}\n",
     "        self.MCS = MCS(config=MCSconfig)\n",
     "        idx = [f'{self.name}_EV{i}' for i in range(self.config.N)]\n",
-    "        dcols = {'s': ['soci', 'socd', 'Pc', 'Pd', 'nc', 'nd',\n",
-    "                       'Q', 'ts', 'tf', 'tt', 'soc0', 'na0'],\n",
+    "        dcols = {'s': ['ts', 'tf', 'tt', 'soc0', 'na0',\n",
+    "                       'soci', 'socd', 'Pc', 'Pd',\n",
+    "                       'nc', 'nd', 'Q'],\n",
     "                 'd': ['u', 'soc', 'c', 'sx', 'na', 'dP',\n",
-    "                       'agc', 'lc', 'mod'],\n",
-    "                 }\n",
-    "        self.sdata = EVData(N=self.config.N, col=dcols['s'], idx=idx)  # static data\n",
-    "        self.ddata = EVData(N=self.config.N, col=dcols['d'], idx=idx)  # dynamic data\n",
-    "\n",
+    "                       'agc', 'lc', 'mod']}\n",
+    "        self.sdata = pd.DataFrame()  # static data\n",
+    "        self.sdata['idx'] = idx\n",
+    "        self.sdata[[dcols['s']]] = -1.0\n",
+    "        self.ddata = pd.DataFrame()  # dynamic data\n",
+    "        self.ddata['idx'] = idx\n",
+    "        self.ddata[[dcols['d']]] = -1.0\n",
     "        # --- 1. uniform distribution parameters ---\n",
     "        ud_cols = ['Pc', 'Pd', 'nc', 'nd', 'Q']\n",
     "        np.random.seed(self.config.seed)\n",
     "        for col in ud_cols:\n",
     "            lb = ud_param[col]['lb']\n",
     "            ub = ud_param[col]['ub']\n",
-    "            self.sdata.v[:, dcols['s'].index(col)] = np.random.uniform(\n",
-    "                low=ud_param[col]['lb'],\n",
-    "                high=ud_param[col]['ub'],\n",
-    "                size=self.config.N)\n",
-    "        # NOTE: assumtpion: nc = nd\n",
-    "        self.sdata.v[:, dcols['s'].index('nc')] = self.sdata.v[:, dcols['s'].index('nd')]\n",
+    "            self.sdata[col] = np.random.uniform(size=self.config.N,\n",
+    "                                                low=ud_param[col]['lb'],\n",
+    "                                                high=ud_param[col]['ub'])\n",
+    "        self.sdata['nd'] = self.sdata['nc']  # NOTE: assumtpion: nc = nd\n",
     "\n",
     "        # --- 2. normal distribution parameters ---\n",
     "        # --- 2.1 ---\n",
@@ -415,8 +416,7 @@
     "            a = (nd_param[col]['lb'] - nd_param[col]['mu']) / nd_param[col]['var']\n",
     "            b = (nd_param[col]['ub'] - nd_param[col]['mu']) / nd_param[col]['var']\n",
     "            distribution = stats.truncnorm(a, b, loc=nd_param[col]['mu'], scale=nd_param[col]['var'])\n",
-    "            self.sdata.v[:, dcols['s'].index(col)] = distribution.rvs(self.config.N,\n",
-    "                                                                      random_state=self.config.seed)\n",
+    "            self.sdata[col] = distribution.rvs(self.config.N, random_state=self.config.seed)\n",
     "\n",
     "        # --- 2.2 time parameters ---\n",
     "        nd_cols = ['ts1', 'ts2', 'tf1', 'tf2']\n",
@@ -439,19 +439,19 @@
     "        mid = tp['tf'].iloc[row_idx].values\n",
     "        tp['tf'].iloc[row_idx] = tp['ts'].iloc[row_idx]\n",
     "        tp['ts'].iloc[row_idx] = mid\n",
-    "        self.sdata.v[:, dcols['s'].index('ts')] = tp['ts']\n",
-    "        self.sdata.v[:, dcols['s'].index('tf')] = tp['tf']\n",
+    "        self.sdata['ts'] = tp['ts']\n",
+    "        self.sdata['tf'] = tp['tf']\n",
     "\n",
     "        # --- 3. online status ---\n",
-    "        u_check1 = self.sdata.v[:, dcols['s'].index('ts')] < self.MCS.config.t\n",
-    "        u_check2 = self.sdata.v[:, dcols['s'].index('tf')] > self.MCS.config.t\n",
+    "        u_check1 = self.sdata['ts'] < self.MCS.config.t\n",
+    "        u_check2 = self.sdata['tf'] > self.MCS.config.t\n",
     "        u_check = u_check1 & u_check2\n",
-    "        self.ddata.v[:, dcols['d'].index('u')] = np.array(u_check)\n",
+    "        self.ddata['u'] = u_check\n",
+    "        self.ddata['u'] = self.ddata['u'].astype(float)\n",
     "\n",
     "    def rctrl(self):\n",
     "        \"\"\"Response to control signal\"\"\"\n",
     "        pass\n",
-    "\n",
     "\n",
     "evs_config = {'N': 10000, 'Ns': 20, 'step': 1, 'seed': 2022}\n",
     "nd_param = {'soci': {'mu': 0.3, 'var': 0.05, 'lb': 0.2, 'ub': 0.4},\n",
@@ -471,7 +471,87 @@
     "                config=evs_config,\n",
     "                ud_param=ud_param,\n",
     "                nd_param=nd_param)\n",
-    "evs.ddata.as_df()\n"
+    "evs.ddata\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>idx</th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   idx  a  b\n",
+       "0    1 -1 -1\n",
+       "1    2 -1 -1\n",
+       "2    3 -1 -1\n",
+       "3    4 -1 -1"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xx = pd.DataFrame()\n",
+    "xx['idx'] = [1, 2, 3, 4]\n",
+    "xx[['a', 'b']] = -1\n",
+    "xx"
    ]
   },
   {
